error de comensales solucionado

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,20 @@
                     <release>17</release>
                 </configuration>
             </plugin>
+
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <mainClass>Main.Main</mainClass>
+                    <arguments>
+                        <argument>argument1</argument>
+                    </arguments>
+                </configuration>
+          </plugin>
+
         </plugins>
     </build>
 </project>
